# DisguiseAPICodegen

./: LICENSE  cameracalibration.swagger.json  d3api.swagger.json  readme.md
.circleci/: config.yml
c/: CMakeLists.txt  README.md
c/.openapi-generator/: FILES
c/api/: CameraCalibrationAPI.c  CameraCalibrationAPI.h  ColourAPI.c  ColourAPI.h  ContentAPI.c  ContentAPI.h  IndirectionsAPI.c  IndirectionsAPI.h  MixedRealityAPI.c  MixedRealityAPI.h  QuickcalAPI.c  QuickcalAPI.h  RenderStreamAPI.c  RenderStreamAPI.h  RenderstreamAPI.c  RenderstreamAPI.h  ResourcesAPI.c  ResourcesAPI.h  SequencingAPI.c  SequencingAPI.h  StatusAPI.c  StatusAPI.h  ThumbnailsAPI.c  ThumbnailsAPI.h  TransportAPI.c  TransportAPI.h
c/docs/: CameraCalibrationAPI.md  ColourAPI.md  ContentAPI.md  IndirectionsAPI.md  MixedRealityAPI.md  QuickcalAPI.md  RenderStreamAPI.md  RenderstreamAPI.md  ResourcesAPI.md  SequencingAPI.md  StatusAPI.md  ThumbnailsAPI.md  TransportAPI.md  cameracalibration_add_observation_request.md  cameracalibration_camera_info.md  cameracalibration_enable_observation_request.md  cameracalibration_enable_observation_response.md  cameracalibration_float3.md  cameracalibration_get_mr_set_response.md  cameracalibration_get_observation_progress_response.md  cameracalibration_list_mr_sets_response.md  cameracalibration_mr_set_info.md  cameracalibration_observation_info.md  cameracalibration_reset_all_observations_request.md  colour_cdl_info.md  colour_list_cdls_response.md  colour_set_cdl_request.md  content_audio_metadata.md  content_get_media_metadata_response.md  content_image_metadata.md  content_image_sequence_metadata.md  content_list_media_metadata_response.md  content_media_metadata.md  content_mesh_metadata.md  content_resolution.md  content_vector3.md  content_video_metadata.md  d3api_bool_response.md  d3api_empty_response.md  d3api_locator.md  (+163 more)
c/model/: cameracalibration_add_observation_request.c  cameracalibration_add_observation_request.h  cameracalibration_camera_info.c  cameracalibration_camera_info.h  cameracalibration_enable_observation_request.c  cameracalibration_enable_observation_request.h  cameracalibration_enable_observation_response.c  cameracalibration_enable_observation_response.h  cameracalibration_float3.c  cameracalibration_float3.h  cameracalibration_get_mr_set_response.c  cameracalibration_get_mr_set_response.h  cameracalibration_get_observation_progress_response.c  cameracalibration_get_observation_progress_response.h  cameracalibration_list_mr_sets_response.c  cameracalibration_list_mr_sets_response.h  cameracalibration_mr_set_info.c  cameracalibration_mr_set_info.h  cameracalibration_observation_info.c  cameracalibration_observation_info.h  cameracalibration_reset_all_observations_request.c  cameracalibration_reset_all_observations_request.h  colour_cdl_info.c  colour_cdl_info.h  colour_list_cdls_response.c  colour_list_cdls_response.h  colour_set_cdl_request.c  colour_set_cdl_request.h  content_audio_metadata.c  content_audio_metadata.h  content_get_media_metadata_response.c  content_get_media_metadata_response.h  content_image_metadata.c  content_image_metadata.h  content_image_sequence_metadata.c  content_image_sequence_metadata.h  content_list_media_metadata_response.c  content_list_media_metadata_response.h  content_media_metadata.c  content_media_metadata.h  (+340 more)
c/src/: apiClient.c
c/unit-test/: test_cameracalibration_add_observation_request.c  test_cameracalibration_camera_info.c  test_cameracalibration_enable_observation_request.c  test_cameracalibration_enable_observation_response.c  test_cameracalibration_float3.c  test_cameracalibration_get_mr_set_response.c  test_cameracalibration_get_observation_progress_response.c  test_cameracalibration_list_mr_sets_response.c  test_cameracalibration_mr_set_info.c  test_cameracalibration_observation_info.c  test_cameracalibration_reset_all_observations_request.c  test_colour_cdl_info.c  test_colour_list_cdls_response.c  test_colour_set_cdl_request.c  test_content_audio_metadata.c  test_content_get_media_metadata_response.c  test_content_image_metadata.c  test_content_image_sequence_metadata.c  test_content_list_media_metadata_response.c  test_content_media_metadata.c  test_content_mesh_metadata.c  test_content_resolution.c  test_content_vector3.c  test_content_video_metadata.c  test_d3api_bool_response.c  test_d3api_empty_response.c  test_d3api_locator.c  test_d3api_vec2_float.c  test_d3api_vec3_float.c  test_indirections_get_indirection_response.c  test_indirections_indirection.c  test_indirections_list_indirection.c  test_indirections_list_indirections_response.c  test_indirections_manual_indirection.c  test_indirections_set_indirections_request.c  test_indirections_set_indirections_response.c  test_machine_info_machine_type.c  test_mixedreality_camera_identity_info.c  test_mixedreality_camera_info.c  test_mixedreality_capture_observation_request.c  (+150 more)
go/: README.md  api_camera_calibration.go  api_colour.go  api_content.go  api_indirections.go  api_mixed_reality.go  api_quickcal.go  api_render_stream.go  api_renderstream.go  api_resources.go  api_sequencing.go  api_status.go  api_thumbnails.go  api_transport.go  client.go  configuration.go  model_cameracalibration_add_observation_request.go  model_cameracalibration_camera_info.go  model_cameracalibration_enable_observation_request.go  model_cameracalibration_enable_observation_response.go  model_cameracalibration_float3.go  model_cameracalibration_get_mr_set_response.go  model_cameracalibration_get_observation_progress_response.go  model_cameracalibration_list_mr_sets_response.go  model_cameracalibration_mr_set_info.go  model_cameracalibration_observation_info.go  model_cameracalibration_reset_all_observations_request.go  model_colour_cdl_info.go  model_colour_list_cdls_response.go  model_colour_set_cdl_request.go  model_content_audio_metadata.go  model_content_get_media_metadata_response.go  model_content_image_metadata.go  model_content_image_sequence_metadata.go  model_content_list_media_metadata_response.go  model_content_media_metadata.go  (+172 more)
python/: README.md  (+1 more)
(+1264 files in other folders)
